--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -25,4 +25,6 @@ jobs:
     - name: Build
       run: |
         npm install
-        grunt
+    
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
