--- a/packages/discord-rpc/package.json
+++ b/packages/discord-rpc/package.json
@@ -57,7 +57,7 @@
   },
   "packageManager": "pnpm@9.8.0",
   "dependencies": {
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.3.2",
     "tslib": "^2.7.0",
     "ws": "^8.14.2"
   },
@@ -65,17 +65,16 @@
     "register-scheme": "github:devsnek/node-register-scheme"
   },
   "devDependencies": {
+    "@favware/cliff-jumper": "^5.0.0",
+    "@types/node": "^22.10.1",
     "@types/ws": "^8.5.13",
     "chai": "^5.0.3",
     "electron": "^33.2.1",
-    "eslint": "^9.15.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint": "^9.16.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "jsdoc-strip-async-await": "^0.1.0",
-    "mocha": "^10.2.0",
-    "prettier": "3.3.3",
+    "mocha": "^11.0.1",
+    "prettier": "^3.4.1",
     "tsd": "^0.31.2",
     "turbo": "^2.1.3",
     "typescript": "^5.6.3",
