--- a/packages/discord-rpc/package.json
+++ b/packages/discord-rpc/package.json
@@ -24,8 +24,10 @@
   "types": "./typings/index.d.ts",
   "scripts": {
     "test": "pnpm run test:typescript && pnpm run test:jest",
+    "test:ci": "pnpm run test:typescript && pnpm run test:jest_ci",
     "test:typescript": "tsc --noEmit && tsd",
     "test:jest": "jest --coverage",
+    "test:jest_ci": "jest --coverage --passWithNoTests",
     "update": "pnpm --recursive update --interactive",
     "update:latest": "pnpm --recursive update --interactive --latest",
     "changelog": "git cliff --prepend ./CHANGELOG.md -u -c ./cliff.toml"
