--- a/packages/discord-rpc/package.json
+++ b/packages/discord-rpc/package.json
@@ -58,6 +58,7 @@
   },
   "packageManager": "pnpm@9.8.0",
   "dependencies": {
+    "events": "^3.3.0",
     "node-fetch": "^2.7.0",
     "tslib": "^2.7.0",
     "ws": "^8.14.2"
